node-main/deps/v8/test/message/fail/class-private-brand-reinitialization.out
*%(basename)s:7: TypeError: Cannot initialize private methods of class B twice on the same object
class B extends A { #x() {} }
^
TypeError: Cannot initialize private methods of class B twice on the same object
    at new B (*%(basename)s:7:1)
    at *%(basename)s:10:1
